@@ -2,6 +2,6 @@ AUX m2_classworlds.conf 145 RMD160 018b5aa7f6a11451304c2e13be1eb986afa5ca84 SHA1
 AUX maven-2.1.pom 276 RMD160 324e76ddff03a6914038bb941a72513f1fa3045b SHA1 3eff2f8808b44723886fe9c30e53f85a77227d47 SHA256 5f7a9cb44a9512c5237fb75e126c7c304c96cee304dfda31031fc4661c395bf6
 AUX mvn 1607 RMD160 d0ffffe80da3aeaff9d22f6b3c40f1a31b365288 SHA1 3f6789299a60866458baeca68d16c6f5a9033ad4 SHA256 d2bd49f9a8f73a0f2679d060fc0cb797168185ec61a3412b302bde8fb17581ac
 AUX settings.xml 553 RMD160 d50c4e1ff7b199b298d578c18ed479cc3e0b915e SHA1 95d35d36fd90d4c499d0dc564e343404b1ff0bf1 SHA256 c8d431a0e01b4c9fae20fb0ca44cd4548c0f4bd2cf5c48d093a91b93747e05a2
-EBUILD maven-2.1.ebuild 3699 RMD160 7a2a0d71169c458313230f7730de31ca8307436e SHA1 36b85652db12f47b101eecc8892c36a54d97d4cd SHA256 357222e53aad80e6cff6fb9328bf27a28f58debfc1b1f078b5ff877de3a03cb5
-MISC ChangeLog 1329 RMD160 8e2769e192de194f94d2d6a39f17c1056a3f9008 SHA1 c7d810cf0f797812a14e2adc0d037f1e1d6bc004 SHA256 e59ecfb6f4a988551a730a9884f37e1b03ae0261047a123b5669024f8e798375
+EBUILD maven-2.1.ebuild 3754 RMD160 82608d1213c409f17f0e2a10efb01bba3bc23c7a SHA1 e40046c76caf6cd295e188aabf8ba6cb7b67f60e SHA256 43c2c3b36e582f776336e65752e5b35e0466e6bec81801c4657d61422c953dd4
+MISC ChangeLog 1437 RMD160 b4f2b245a7cc5d4ca1fbc067cf101dc346d9f068 SHA1 634eb30540fd2aa82c5291f7471ac99d84c58531 SHA256 230c32fa5776be7cde3e72bc436798b5d6edefa2aa3226bca5b5a7088eeb00d1
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
